fix compilation error in Java8ParserVisitor